2012-05-31  Ian Vollick  <vollick@chromium.org>

        [chromium] create WebTransformOperation interface for chromium platform
        https://bugs.webkit.org/show_bug.cgi?id=87510

        Reviewed by James Robinson.

        * Platform.gypi:
        * chromium/public/WebTransformOperations.h: Added.
        (WebKit):
        (WebTransformOperations):
        (WebKit::WebTransformOperations::~WebTransformOperations):
        (WebKit::WebTransformOperations::WebTransformOperations):
        (WebKit::WebTransformOperations::operator=):

2012-05-30  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: add MemoryUsageSupport::processMemorySizesInBytes
        https://bugs.webkit.org/show_bug.cgi?id=87830

        Reviewed by James Robinson.

        * chromium/public/Platform.h:
        (Platform):
        (WebKit::Platform::processMemorySizesInBytes): moved this method from
        Source/WebKit/chromium/public/platform/WebKitPlatformSupport.h, also
        removed 'get' prefix.

2012-05-29  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move fileExists to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=87531

        Reviewed by Adam Barth.

        Call fileExists through fileUtilities(), not directly.

        * chromium/public/Platform.h:
        (Platform):

2012-05-29  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move fileExists to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=87531

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * chromium/public/Platform.h:
        (WebKit::Platform::fileExists):
        (Platform):

2012-05-29  Shawn Singh  <shawnsingh@chromium.org>

        [chromium] make WebTransformationMatrix object usable by non-webkit code
        https://bugs.webkit.org/show_bug.cgi?id=87315

        Reviewed by James Robinson.

        * chromium/public/WebTransformationMatrix.h: