@@ -1,3 +1,13 @@
+2012-05-31  Dana Jansens  <danakj@chromium.org>
+
+        [chromium] Add copy constructor to WebFilterOperations
+        https://bugs.webkit.org/show_bug.cgi?id=87970
+
+        Reviewed by James Robinson.
+
+        * chromium/public/WebFilterOperations.h:
+        (WebKit::WebFilterOperations::WebFilterOperations):
+
 2012-05-31  Ian Vollick  <vollick@chromium.org>
 
         [chromium] create WebTransformOperation interface for chromium platform
